    <i>, <b>, <u>, <mark>, and <bdi> if a matching class value
    is found in `inline` and `literal` elements.
    Use <ins> and <del> if a matching class value
    is found in `inline`, `literal`, or `container` elements.

  - Move non-essential styling from ``minimal.css`` to ``plain.css``.
    Support numbered figures in ``plain.css``.

  - Fix bug #398: properly close link tag to "schema.dcterms".

* docutils/writers/latex2e/__init__.py:

  - Use LaTeX environments for admonitions and "class wrappers" for styling
    admonitions and titles if the new configuration setting
    `legacy_class_functions`_ is False.

    .. _legacy_class_functions: docs/user/config.html#legacy-class-functions

  - Remove backwards compatibility code for the deprecated
    `styling command`__ prefix ``\docutilsrole``.

    __ docs/user/latex.html#custom-interpreted-text-roles

  - Support the `memoir` LaTeX document class.
    Fixes bugs #390, #391, and #392.

  - The special value "auto" for the `graphicx_option`_ setting
    is no longer supported (it never worked for xetex/luatex).

    .. _graphicx_option: docs/user/config.html#graphicx-option

  - Most helper commands and element definitions are now defined in the
    LaTeX package `docutils.sty`_ and only inserted in the document
    preamble if the `stylesheet`__ setting does not list "docutils".

    .. _docutils.sty: https://ctan.org/pkg/docutils
    __ docs/user/config.html#stylesheet-latex-writers

  - Apply patch #173 "Make \*TeX writers convert nonstandard table
    classes to DUclass environments" by John Thorvald Wodder II.

  - Fix bug #408 "Incorrect assert in latex writer
    for multiple citation references".

  - Apply patch #175 "Fix alignment of nested tables",
    additional fixes to table alignment.

  - Do not write Docutils-generated ToC, when ``use_latex_toc``
    is True. (This did happen when publishing from a doctree.)
    
  - Set PDF document properties from "meta" directive content.
